--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
          <input type="password" placeholder="Senha">
          <br><br>
          <button>
-            <Strong>Entrar</Strong>/button>
+            <Strong>Entrar</Strong></button>
     </div>
 </body>
 </html>
