--- a/login.html
+++ b/login.html
@@ -56,8 +56,7 @@
          <br><br>
          <input type="password" placeholder="Senha">
          <br><br>
-         <button>
-            <Strong>Entrar</Strong></button>
+         <button><Strong>Entrar</Strong></button>
     </div>
 </body>
 </html>
